force-app/main/default/objects/ServiceDefinition__c/ServiceDefinition__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as Definições de Atendimento para fluxos transacionais.</description>
    <label>Definição de Atendimento</label>
    <nameField>
        <label>Processo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Definições de Atendimento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>