force-app/main/default/objects/ServiceDefinition__c/fields/AttendantMessage__c.field-meta.xml
<CustomField>
    <fullName>AttendantMessage__c</fullName>
    <label>Mensagem Atendente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>