force-app/main/default/objects/ServiceDefinition__c/fields/Closure__c.field-meta.xml
<CustomField>
    <fullName>Closure__c</fullName>
    <label>Fechamento Salesforce</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>