force-app/main/default/objects/ServiceDefinition__c/fields/ClosureMapping__c.field-meta.xml
<CustomField>
    <fullName>ClosureMapping__c</fullName>
    <label>De x Para</label>
    <type>TextArea</type>
</CustomField>