force-app/main/default/objects/ServiceDefinition__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Contexto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>