force-app/main/default/objects/ServiceDefinition__c/fields/DisputeDenied__c.field-meta.xml
<CustomField>
    <fullName>DisputeDenied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contestação Negada?</label>
    <type>Checkbox</type>
</CustomField>