force-app/main/default/objects/ServiceDefinition__c/fields/GeneratesRecordsLegacySystem__c.field-meta.xml
<CustomField>
    <fullName>GeneratesRecordsLegacySystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gera Registro no Sistema Legado?</label>
    <type>Checkbox</type>
</CustomField>