force-app/main/default/objects/ServiceDefinition__c/fields/LegacySystem__c.field-meta.xml
<CustomField>
    <fullName>LegacySystem__c</fullName>
    <label>Sistema Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEXT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>