force-app/main/default/objects/ServiceDefinition__c/fields/ProductSegment__c.field-meta.xml
<CustomField>
    <fullName>ProductSegment__c</fullName>
    <label>Segmento do Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Móvel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>