force-app/main/default/objects/ServiceDefinition__c/fields/ResultConcession__c.field-meta.xml
<CustomField>
    <fullName>ResultConcession__c</fullName>
    <description>Possíveis Definições de Atendimento dentro do fluxo de Concessão.</description>
    <label>Resultado Concessão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NegativeDefinition</fullName>
            </value>
            <value>
                <fullName>RepeatedConcessionDenied</fullName>
            </value>
            <value>
                <fullName>GrantConcession</fullName>
            </value>
            <value>
                <fullName>RetentionDeniedDefinition</fullName>
            </value>
            <value>
                <fullName>DeniedDefinitionTransfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>