force-app/main/default/objects/ServiceDefinition__c/fields/RootCause__c.field-meta.xml
<CustomField>
    <fullName>RootCause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Causa Raiz?</label>
    <type>Checkbox</type>
</CustomField>