force-app/main/default/objects/ServiceDefinition__c/fields/ServiceDefinitionName__c.field-meta.xml
<CustomField>
    <fullName>ServiceDefinitionName__c</fullName>
    <label>Código da Definição de Atendimento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>