force-app/main/default/objects/ServiceDefinition__c/fields/StatusItem__c.field-meta.xml
<CustomField>
    <fullName>StatusItem__c</fullName>
    <label>Status do Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotStarted</fullName>
                <label>Não iniciado</label>
            </value>
            <value>
                <fullName>InAnalisys</fullName>
                <label>Em análise</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Encerrado</label>
            </value>
            <value>
                <fullName>Concession</fullName>
                <label>Concessão</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Procedente</label>
            </value>
            <value>
                <fullName>Denied</fullName>
                <label>Improcedente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>