force-app/main/default/objects/ServiceDefinition__c/fields/StepCode__c.field-meta.xml
<CustomField>
    <fullName>StepCode__c</fullName>
    <label>Código do Step</label>
    <length>80</length>
    <type>Text</type>
</CustomField>