force-app/main/default/objects/ServiceDefinition__c/recordTypes/DisputeServiceDefinition.recordType-meta.xml
<RecordType>
    <fullName>DisputeServiceDefinition</fullName>
    <active>true</active>
    <description>Tipo de registro específico para as Definições de Atendimento do Fluxo de Contestação de Faturas.</description>
    <label>Definição de Atendimento de Contestação</label>
</RecordType>