force-app/main/default/objects/ServiceDefinition__c/validationRules/nameReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>nameReadOnly</fullName>
    <active>true</active>
    <description>Não permite alterar o campo &apos;Processo&apos;</description>
    <errorConditionFormula>AND(
				ISCHANGED(Name),
			AND(
        $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
        $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
        $Profile.Name &lt;&gt; &apos;AdministracaoSistema&apos;
			)   
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Não é permitido alterar o campo &apos;Processo&apos;</errorMessage>
</ValidationRule>