force-app/main/default/objects/ServiceDefinition__c/listViews/AllDefi.listView-meta.xml
<ListView>
    <fullName>AllDefi</fullName>
    <columns>NAME</columns>
    <columns>StepCode__c</columns>
    <columns>Status__c</columns>
    <columns>StatusItem__c</columns>
    <columns>AttendantMessage__c</columns>
    <columns>ServiceDefinitionName__c</columns>
    <columns>ClosureMapping__c</columns>
    <columns>Closure__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllDefi</label>
</ListView>